--- a/.github/workflows/job.yaml
+++ b/.github/workflows/job.yaml
@@ -13,46 +13,38 @@ env:
 
 
 jobs:
-  # lokalni build docker image pro test
-  docker_build:
-    name: 'Build Docker Image'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Build Docker image
-        run: docker build -t $ECR_REPOSITORY:$IMAGE_TAG ./nginx-custom
-
-  # test
+# Local docker a jednoduchý test předtím než jde na terraform
   docker_test:
     name: 'Test Docker Image'
     runs-on: ubuntu-latest
-    needs: docker_build
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Run container
-        run: docker run -d -p 8080:80 --name test_container $ECR_REPOSITORY:$IMAGE_TAG
+    - name: Build Docker image
+      run: docker build -t $ECR_REPOSITORY:$IMAGE_TAG ./nginx-custom
 
-      - name: Wait for container to be ready
-        run: |
-          echo "Waiting for Nginx to start..."
-          for i in {1..15}; do
-            if curl -s http://localhost:8080 | grep -q "UKOL9 test page"; then
-              echo "✅ Container is ready"
-              exit 0
-            fi
-            sleep 2
-          done
-          echo "❌ Test failed: string not found after 30 seconds"
-          exit 1
+    - name: Run container
+      run: docker run -d -p 8080:80 --name test_container $ECR_REPOSITORY:$IMAGE_TAG
+
+    - name: Wait for container to be ready
+      run: |
+        echo "Waiting for Nginx to start..."
+        for i in {1..15}; do
+          if curl -s http://localhost:8080 | grep -q "UKOL9 test page"; then
+            echo "✅ Container is ready"
+            exit 0
+          fi
+          sleep 2
+        done
+        echo "❌ Test failed: string not found after 30 seconds"
+        exit 1
 
 # pokud projde udělá se ecr pokud už neexistuje
   terraform-ecr:
     name: 'ECR pro custom html'
     runs-on: ubuntu-latest
+    needs: docker_test
     permissions:
       contents: read
       id-token: write
